syntax = "proto3";

package io.harness.perpetualtask.instancesync;

option java_multiple_files = true;

message NativeHelmInstanceSyncPerpetualTaskParams {
  string account_id = 1;
  repeated NativeHelmDeploymentRelease deployment_release_list = 2;
  string helm_version = 3;
}

message NativeHelmDeploymentRelease {
  bytes k8s_infra_delegate_config = 1;
  repeated string namespaces = 2;
  string release_name = 3;
  bytes helm_chart_info = 4;
}